# uncertaintyx

./: .gitignore  ABOUT.md  ABSTRACT.md  CITATION.cff  CONTRIBUTING.md  FRAMING.md  IDEAS.md  LICENSE  README.md  _config.yml  environment.yml  pyproject.toml
.github/: codecov.yml
.github/workflows/: codeql.yml  python-package.yml
_includes/: head-custom.html
_layout/: default.html
assets/css/: style.scss
doc/: Lee2010.ipynb
test/b/: test_b_jax.py
test/fit/: test_regression_jax.py  test_regression_numpy.py  test_regression_torch.py
test/fit/eiv/: test_eiv_jax.py  test_eiv_numpy.py
test/gum/: __init__.py  test_example_9_2.py  test_example_9_3.py  test_example_9_4.py
test/gum/jax/: test_example_9_2.py  test_example_9_3.py  test_example_9_4.py
test/gum/numpy/: test_example_9_2.py
test/gum/torch/: test_example_9_2.py  test_example_9_3.py  test_example_9_4.py
test/oceancolour/: test_carbon.py  test_ocx.py  test_qaa.py  test_supacool.py
test/plot/: test_plots.py
test/resources/: __init__.py  adg.csv  fig2.csv
test/resources/oceancolour/: __init__.py  a.csv  aph.csv  aw.csv  bbp.csv  bbw.csv  chime_rra.csv  chime_snr.csv  fig3.csv  hyperboost.csv  owt.csv  rrs.csv  wav.csv
test/retrieve/oe/: test_oe_jax.py
uncertaintyx/: __init__.py  plotting.py  tyx.py
uncertaintyx/b/: __init__.py  jax.py
uncertaintyx/f/: jax.py  numpy.py  torch.py
uncertaintyx/fit/: randomsampling.py  regression.py
uncertaintyx/fit/eiv/: __init__.py  jax.py  numpy.py
uncertaintyx/g/: jax.py
uncertaintyx/interface/: core.py
uncertaintyx/m/: jax.py  numpy.py  torch.py
uncertaintyx/oceancolour/: carbon.py  oceancolour.py  ocx.py  qaa.py  supacool.py
uncertaintyx/phytoplankton/: pc.py
uncertaintyx/plot/: plots.py
uncertaintyx/retrieve/oe/: __init__.py  jax.py
